--- a/spark-scdengine/pom.xml
+++ b/spark-scdengine/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>spark-scdengine</groupId>
 	<artifactId>spark-scdengine</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
